<resources>
    <string name="app_name">Youth Care</string>
    <string name="todo">TODO</string>
    <string name="app_description">الادارة العامه لرعاية الشباب</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log Out</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="sections">Sections</string>
    <string name="about_us">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
